--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textview1"
             android:hint="case"
-            android:textSize="16pt"
+            android:textSize="14pt"
             android:layout_below="@id/linera1"
             android:textColor="@color/blue"
             android:textStyle="bold"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textview2"
             android:hint="lawyers"
-            android:textSize="16pt"
+            android:textSize="14pt"
             android:layout_marginHorizontal="10pt"
             android:drawableTop="@drawable/ic_baseline_work_outline_24">
 
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/CLINTE"
             android:hint="Clients"
-            android:textSize="14pt"
+            android:textSize="13pt"
             android:layout_below="@id/linera1"
             android:textColor="@color/blue"
             android:textStyle="bold"
@@ -85,13 +85,14 @@
         android:orientation="horizontal"
         android:layout_below="@id/linar2"
         android:layout_marginTop="5pt"
+        android:id="@+id/linera3"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="schedule"
             android:drawableTop="@drawable/calender"
-            android:textSize="14pt"
+            android:textSize="13pt"
             android:textStyle="bold"
             android:textColor="@color/blue"
             />
@@ -100,7 +101,7 @@
             android:layout_height="wrap_content"
             android:hint="case update"
             android:drawableTop="@drawable/update"
-            android:textSize="14pt"
+            android:textSize="13pt"
             android:textStyle="bold"
             android:textColor="@color/blue"
             android:backgroundTint="@color/black"
@@ -109,6 +110,50 @@
 
 
     </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/linera3"
+    android:orientation="horizontal"
+    android:id="@+id/linear4"
+    >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="evidence"
+        android:drawableTop="@drawable/fingureprint"
+        android:textSize="13pt"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
+        android:backgroundTint="@color/black"
 
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="notes"
+        android:drawableTop="@drawable/notebook"
+        android:textSize="13pt"
+        android:layout_marginLeft="4pt"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
+        android:backgroundTint="@color/black"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4pt"
+        android:backgroundTint="@color/black"
+        android:hint="handbooks"
+        android:textColor="@color/blue"
+        android:textSize="13pt"
+        android:textStyle="bold"
+        android:drawableTop="@drawable/book"
+
+
+        />
+</LinearLayout>
 
 </RelativeLayout>
