login and signup updation

--- a/app/src/main/res/layout/activity_regestrayion.xml
+++ b/app/src/main/res/layout/activity_regestrayion.xml
@@ -1,61 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".regestrayion"
+    android:background="#123456"
     android:orientation="vertical"
-    android:padding="10pt"
-    android:background="@drawable/img"
-    >
+    android:gravity="center_horizontal">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="The Lawyer diary"
+        android:textStyle="bold"
+        android:textSize="35dp"
+        android:id="@+id/img"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:layout_marginTop="30dp"/>
+
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_below="@+id/img"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/lawyer" />
+    <EditText
+        android:id="@+id/edittext_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageview"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
+        android:drawablePadding="20dp"
+        android:hint="Username"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <EditText
+        android:id="@+id/edittext_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edittext_username"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="20dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+    <EditText
+        android:id="@+id/edittext_cnf_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edittext_password"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="20dp"
+        android:hint="Re-enter-password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <Button
+        android:id="@+id/button_register"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/edittext_cnf_password"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:background="#893997"
+        android:text="@string/register"
+        android:textColor="@color/design_default_color_background" />
 
 
 
     <TextView
-        android:layout_width="272dp"
-        android:layout_height="75dp"
-        android:layout_margin="30pt"
-        android:text="regestraion form"
-        android:textAlignment="center"
-        android:textSize="14pt"
-        android:textStyle="bold" />
+        android:id="@+id/textview_login"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="30dp"
+        android:text="already_registered? Login Here"
+        android:textColor="#ffffff"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/button_register"/>
 
-    <EditText
-        android:layout_width="332dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10pt"
-        android:hint="full name"
-        android:textSize="14pt" />
 
-    <EditText
-        android:layout_width="337dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10pt"
-        android:hint="email"
-        android:textSize="14pt" />
 
-    <EditText
-        android:layout_width="341dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10pt"
-        android:hint="passward"
-        android:textSize="14pt" />
 
-    <EditText
-        android:layout_width="345dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10pt"
-        android:hint="confirm passward"
-        android:textSize="14pt" />
 
-    <Button
-        android:layout_width="248dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10pt"
-        android:hint="sign_up"
-        android:textSize="14dp"
-        android:textAlignment="center"
-        android:layout_gravity="center"/>
-
-</LinearLayout>
+</RelativeLayout>
