--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="blue">#2E0571</color>
     <color name="majenda">#CD35DD</color>
     <color name="black">#000000</color>
+    <color name="white">#FDF9F9</color>
 
 
 
