--- a/app/src/main/res/layout/activity_verticlal.xml
+++ b/app/src/main/res/layout/activity_verticlal.xml
@@ -5,67 +5,98 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".verticlal"
-    >
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/ali"
-    android:text="Login..."
-    android:layout_marginTop="35dp"
-    android:gravity="center"
-    android:textSize="50dp">
+    android:id="@+id/container"
+    android:background="#123456"
+    android:gravity="center_horizontal">
 
-</TextView>
-    <EditText
+    <TextView
+        android:id="@+id/textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ali1"
-        android:hint="Enter User name"
-        android:layout_below="@+id/ali"
-        android:layout_marginTop="20dp"
-        android:padding="10pt"
-        android:textSize="14pt">
+        android:layout_marginTop="30dp"
+        android:text="The Lawyer diary"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="130dp"
+        android:layout_below="@id/textview"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/lawyer" />
 
 
-    </EditText>
     <EditText
+        android:id="@+id/edittext_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pass"
-        android:hint="enter passward"
-        android:layout_below="@+id/ali1"
-        android:layout_marginTop="5dp"
-        android:textSize="14pt"
-        android:padding="10pt"
-        ></EditText>
+        android:layout_below="@id/imageview"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
+        android:drawablePadding="20dp"
+        android:hint="Username"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
     <EditText
+        android:id="@+id/edittext_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:hint="enter email"
-        android:layout_below="@+id/pass"
-        android:layout_marginTop="5dp"
-        android:textSize="14pt"
-        android:padding="10pt"
-        ></EditText>
+        android:layout_below="@id/edittext_username"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="20dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
     <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edittext_password"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:background="#893997"
+        android:text="LOGIN"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+
+    <TextView
+        android:id="@+id/textview_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_below="@+id/email"
-        android:background="#6D616E"
-        android:layout_centerHorizontal="true"
-        android:text="button"
+        android:layout_below="@+id/button_login"
+        android:layout_marginTop="60dp"
+        android:text="Don't you have account? Register Here"
+        android:textAlignment="center"
+        android:textColor="@color/white" />
 
 
-        ></Button>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textview_register"
+        android:layout_marginTop="100dp"
+        android:text="Copyrights &#169; TMS Pvt Ltd, Lahore"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
 
 
 </RelativeLayout>
-
-
-
-
