--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -92,21 +92,22 @@
                             android:layout_height="match_parent">
 
                             <ImageView
+                                android:id="@+id/img2"
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
-                                android:id="@+id/img2"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/ic_baseline_work_outline_24"/>
+                                android:src="@drawable/ic_baseline_work_outline_24" />
+
                             <TextView
+                                android:id="@+id/txt2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/txt2"
+                                android:layout_below="@+id/img2"
+                                android:layout_centerInParent="true"
+                                android:layout_marginTop="10dp"
                                 android:text="Lawyers"
                                 android:textSize="16sp"
-                                android:textStyle="bold"
-                                android:layout_centerInParent="true"
-                                android:layout_below="@+id/img2"
-                                android:layout_marginTop="10dp"/>
+                                android:textStyle="bold" />
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
