--- a/app/src/main/res/layout/activity_casee.xml
+++ b/app/src/main/res/layout/activity_casee.xml
@@ -4,75 +4,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".casee">
+    tools:context=".casee"
+    android:background="#123456"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/linerar_case"
-        android:padding="8pt"
-        android:layout_marginTop="20pt">
-        <EditText
+        android:layout_height="150dp">
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="case status"
-            android:textSize="14pt"
-            android:id="@+id/case_status"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="clinte name"
-            android:textSize="14pt"
-
-            android:layout_marginTop="5pt"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="case number"
-            android:textSize="14pt"
-
-            android:layout_marginTop="5pt"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="case name"
-            android:textSize="14pt"
-
-            android:layout_marginTop="5pt"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="case date"
-            android:textSize="14pt"
-
-            android:layout_marginTop="5pt"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="remarks"
-            android:textSize="14pt"
-
-            android:layout_marginTop="5pt"
-            />
-        />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="submit"
-            android:backgroundTint="#9FAAA8"
-            android:textSize="14pt"
-            android:id="@+id/button1"
-            />
-
-
+            android:layout_height="match_parent"
+            android:layout_marginTop="60dp"
+            android:text="Case Details"
+            android:textAlignment="center"
+            android:textSize="30dp"
+            android:textStyle="bold" />
     </LinearLayout>
+
+
+        <EditText
+            android:id="@+id/casestatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Case Status"
+            android:inputType="textPassword"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:id="@+id/clientname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Client Name"
+            android:layout_below="@+id/casestatus"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
+
+        <EditText
+            android:id="@+id/casenumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Case Number"
+            android:layout_below="@+id/clientname"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:id="@+id/casename"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Case Name"
+            android:layout_below="@+id/casenumber"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:id="@+id/casedate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Case Date"
+            android:layout_below="@+id/casename"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:id="@+id/remarks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Remarks"
+            android:layout_below="@+id/casedate"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+        />
+
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/remarks"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:background="#6E6363"
+        android:backgroundTint="@color/purple_200"
+        android:text="Submit"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
 
 
 
