--- a/app/src/main/res/layout/activity_casee.xml
+++ b/app/src/main/res/layout/activity_casee.xml
@@ -5,55 +5,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".casee"
-    android:background="#123456"
+    android:background="@drawable/download"
     android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="100dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="60dp"
+            android:gravity="center_horizontal"
             android:text="Case Details"
-            android:textAlignment="center"
             android:textSize="30dp"
             android:textStyle="bold" />
     </LinearLayout>
 
 
-        <EditText
-            android:id="@+id/casestatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="5dp"
-            android:background="#30ffffff"
-            android:drawablePadding="20dp"
-            android:hint="Case Status"
-            android:inputType="textPassword"
-            android:padding="20dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+    <EditText
+        android:id="@+id/casestatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="#30ffffff"
+        android:drawablePadding="20dp"
+        android:hint="Case Status"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
-        <EditText
-            android:id="@+id/clientname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="5dp"
-            android:background="#30ffffff"
-            android:drawablePadding="20dp"
-            android:hint="Client Name"
-            android:layout_below="@+id/casestatus"
-            android:padding="20dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"/>
+    <EditText
+        android:id="@+id/clientname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/casestatus"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="#30ffffff"
+        android:drawablePadding="20dp"
+        android:hint="Client Name"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
         <EditText
             android:id="@+id/casenumber"
@@ -127,8 +127,6 @@
         android:layout_below="@+id/remarks"
         android:layout_centerInParent="true"
         android:layout_marginTop="12dp"
-        android:background="#6E6363"
-        android:backgroundTint="@color/purple_200"
         android:text="Submit"
         android:textColor="@color/white"
         android:textSize="20dp" />
